cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(VISUALIZER)
find_package(PCL REQUIRED)
include_directories(${PCL_INCLUDE_DIRS} lib)
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(visualizer visualizer.cpp)
target_link_libraries(visualizer ${PCL_LIBRARIES})
